@@ -3,7 +3,7 @@
 if ( class_exists( 'FLUpdater' ) ) {
 	FLUpdater::add_product(array(
 		'name'    => 'Beaver Builder Plugin (Pro Version)',
-		'version' => '2.2.6.2',
+		'version' => '2.2.6.3',
 		'slug'    => 'bb-plugin',
 		'type'    => 'plugin',
 	));
