@@ -1,3 +1,9 @@
+<h4>2.2.6.3 - 11/27/2019</h4>
+<p><strong>Hot Fix</strong></p>
+<ul>
+	<li>Fixed Importer issues.</li>
+</ul>
+
 <h4>2.2.6.2 - 11/18/2019</h4>
 <p><strong>Hot Fix</strong></p>
 <ul>
